--- a/First.html
+++ b/First.html
@@ -1,4 +1,12 @@
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+	    <meta charset="utf-8">
+        <title>test javascript</title>
+    </head>
+    <body>
+        <div>
+            <button onclick="ttf('JS与OC交互');">点击我然后看xcode的log</button> 
+        </div>
+    </body>
+</html>
